# CrossPlatformGLEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json
CrossPlatformGLEngine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.hpp  CrossPlatformGLEngine.cpp  CrossPlatformGLEngine.h  CrossPlatformGLEngine.hpp  External.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp  ObjLoader.cpp  ObjLoader.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utilities.hpp  Utilties.cpp  Window.cpp  Window.hpp  imgui_init.cpp  imgui_init.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
tests/: CMakeLists.txt  cube_test.cpp  dynamic_mesh_test.cpp  imgui_test.cpp  massive_gpu_instancing_test.cpp  multi_window_test.cpp  triangle_test.cpp  triangle_test_ecs.cpp  triangle_texture_test.cpp  window_movement_test.cpp
tests/res/Shaders/: 3D_Lit.frag  3D_Lit.vert
