# CMakeList.txt : CMake project for CrossPlatformGLEngine, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (CrossPlatformGLEngine "CrossPlatformGLEngine.cpp" "CrossPlatformGLEngine.h" )
target_link_libraries(CrossPlatformGLEngine glfw)
target_link_libraries(CrossPlatformGLEngine glad)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET CrossPlatformGLEngine PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
